com_from_web/y.output
语法

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP
   13                   | '(' type_name ')' '{' initializer_list '}'
   14                   | '(' type_name ')' '{' initializer_list ',' '}'

   15 argument_expression_list: assignment_expression
   16                         | argument_expression_list ',' assignment_expression

   17 unary_expression: postfix_expression
   18                 | INC_OP unary_expression
   19                 | DEC_OP unary_expression
   20                 | unary_operator cast_expression
   21                 | SIZEOF unary_expression
   22                 | SIZEOF '(' type_name ')'

   23 unary_operator: '&'
   24               | '*'
   25               | '+'
   26               | '-'
   27               | '~'
   28               | '!'

   29 cast_expression: unary_expression
   30                | '(' type_name ')' cast_expression

   31 multiplicative_expression: cast_expression
   32                          | multiplicative_expression '*' cast_expression
   33                          | multiplicative_expression '/' cast_expression
   34                          | multiplicative_expression '%' cast_expression

   35 additive_expression: multiplicative_expression
   36                    | additive_expression '+' multiplicative_expression
   37                    | additive_expression '-' multiplicative_expression

   38 shift_expression: additive_expression
   39                 | shift_expression LEFT_OP additive_expression
   40                 | shift_expression RIGHT_OP additive_expression

   41 relational_expression: shift_expression
   42                      | relational_expression '<' shift_expression
   43                      | relational_expression '>' shift_expression
   44                      | relational_expression LE_OP shift_expression
   45                      | relational_expression GE_OP shift_expression

   46 equality_expression: relational_expression
   47                    | equality_expression EQ_OP relational_expression
   48                    | equality_expression NE_OP relational_expression

   49 and_expression: equality_expression
   50               | and_expression '&' equality_expression

   51 exclusive_or_expression: and_expression
   52                        | exclusive_or_expression '^' and_expression

   53 inclusive_or_expression: exclusive_or_expression
   54                        | inclusive_or_expression '|' exclusive_or_expression

   55 logical_and_expression: inclusive_or_expression
   56                       | logical_and_expression AND_OP inclusive_or_expression

   57 logical_or_expression: logical_and_expression
   58                      | logical_or_expression OR_OP logical_and_expression

   59 conditional_expression: logical_or_expression
   60                       | logical_or_expression '?' expression ':' conditional_expression

   61 assignment_expression: conditional_expression
   62                      | unary_expression assignment_operator assignment_expression

   63 assignment_operator: '='
   64                    | MUL_ASSIGN
   65                    | DIV_ASSIGN
   66                    | MOD_ASSIGN
   67                    | ADD_ASSIGN
   68                    | SUB_ASSIGN
   69                    | LEFT_ASSIGN
   70                    | RIGHT_ASSIGN
   71                    | AND_ASSIGN
   72                    | XOR_ASSIGN
   73                    | OR_ASSIGN

   74 expression: assignment_expression
   75           | expression ',' assignment_expression

   76 constant_expression: conditional_expression

   77 declaration: declaration_specifiers ';'
   78            | declaration_specifiers init_declarator_list ';'

   79 declaration_specifiers: storage_class_specifier
   80                       | storage_class_specifier declaration_specifiers
   81                       | type_specifier
   82                       | type_specifier declaration_specifiers
   83                       | type_qualifier
   84                       | type_qualifier declaration_specifiers
   85                       | function_specifier
   86                       | function_specifier declaration_specifiers

   87 init_declarator_list: init_declarator
   88                     | init_declarator_list ',' init_declarator

   89 init_declarator: declarator
   90                | declarator '=' initializer

   91 storage_class_specifier: TYPEDEF
   92                        | EXTERN
   93                        | STATIC
   94                        | AUTO
   95                        | REGISTER

   96 type_specifier: VOID
   97               | CHAR
   98               | SHORT
   99               | INT
  100               | LONG
  101               | FLOAT
  102               | DOUBLE
  103               | SIGNED
  104               | UNSIGNED
  105               | BOOL
  106               | COMPLEX
  107               | IMAGINARY
  108               | struct_or_union_specifier
  109               | enum_specifier
  110               | TYPE_NAME

  111 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  112                          | struct_or_union '{' struct_declaration_list '}'
  113                          | struct_or_union IDENTIFIER

  114 struct_or_union: STRUCT
  115                | UNION

  116 struct_declaration_list: struct_declaration
  117                        | struct_declaration_list struct_declaration

  118 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  119 specifier_qualifier_list: type_specifier specifier_qualifier_list
  120                         | type_specifier
  121                         | type_qualifier specifier_qualifier_list
  122                         | type_qualifier

  123 struct_declarator_list: struct_declarator
  124                       | struct_declarator_list ',' struct_declarator

  125 struct_declarator: declarator
  126                  | ':' constant_expression
  127                  | declarator ':' constant_expression

  128 enum_specifier: ENUM '{' enumerator_list '}'
  129               | ENUM IDENTIFIER '{' enumerator_list '}'
  130               | ENUM '{' enumerator_list ',' '}'
  131               | ENUM IDENTIFIER '{' enumerator_list ',' '}'
  132               | ENUM IDENTIFIER

  133 enumerator_list: enumerator
  134                | enumerator_list ',' enumerator

  135 enumerator: IDENTIFIER
  136           | IDENTIFIER '=' constant_expression

  137 type_qualifier: CONST
  138               | RESTRICT
  139               | VOLATILE

  140 function_specifier: INLINE

  141 declarator: pointer direct_declarator
  142           | direct_declarator

  143 direct_declarator: IDENTIFIER
  144                  | '(' declarator ')'
  145                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  146                  | direct_declarator '[' type_qualifier_list ']'
  147                  | direct_declarator '[' assignment_expression ']'
  148                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  149                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  150                  | direct_declarator '[' type_qualifier_list '*' ']'
  151                  | direct_declarator '[' '*' ']'
  152                  | direct_declarator '[' ']'
  153                  | direct_declarator '(' parameter_type_list ')'
  154                  | direct_declarator '(' identifier_list ')'
  155                  | direct_declarator '(' ')'

  156 pointer: '*'
  157        | '*' type_qualifier_list
  158        | '*' pointer
  159        | '*' type_qualifier_list pointer

  160 type_qualifier_list: type_qualifier
  161                    | type_qualifier_list type_qualifier

  162 parameter_type_list: parameter_list
  163                    | parameter_list ',' ELLIPSIS

  164 parameter_list: parameter_declaration
  165               | parameter_list ',' parameter_declaration

  166 parameter_declaration: declaration_specifiers declarator
  167                      | declaration_specifiers abstract_declarator
  168                      | declaration_specifiers

  169 identifier_list: IDENTIFIER
  170                | identifier_list ',' IDENTIFIER

  171 type_name: specifier_qualifier_list
  172          | specifier_qualifier_list abstract_declarator

  173 abstract_declarator: pointer
  174                    | direct_abstract_declarator
  175                    | pointer direct_abstract_declarator

  176 direct_abstract_declarator: '(' abstract_declarator ')'
  177                           | '[' ']'
  178                           | '[' assignment_expression ']'
  179                           | direct_abstract_declarator '[' ']'
  180                           | direct_abstract_declarator '[' assignment_expression ']'
  181                           | '[' '*' ']'
  182                           | direct_abstract_declarator '[' '*' ']'
  183                           | '(' ')'
  184                           | '(' parameter_type_list ')'
  185                           | direct_abstract_declarator '(' ')'
  186                           | direct_abstract_declarator '(' parameter_type_list ')'

  187 initializer: assignment_expression
  188            | '{' initializer_list '}'
  189            | '{' initializer_list ',' '}'

  190 initializer_list: initializer
  191                 | designation initializer
  192                 | initializer_list ',' initializer
  193                 | initializer_list ',' designation initializer

  194 designation: designator_list '='

  195 designator_list: designator
  196                | designator_list designator

  197 designator: '[' constant_expression ']'
  198           | '.' IDENTIFIER

  199 statement: labeled_statement
  200          | compound_statement
  201          | expression_statement
  202          | selection_statement
  203          | iteration_statement
  204          | jump_statement

  205 labeled_statement: IDENTIFIER ':' statement
  206                  | CASE constant_expression ':' statement
  207                  | DEFAULT ':' statement

  208 compound_statement: '{' '}'
  209                   | '{' block_item_list '}'

  210 block_item_list: block_item
  211                | block_item_list block_item

  212 block_item: declaration
  213           | statement

  214 expression_statement: ';'
  215                     | expression ';'

  216 selection_statement: IF '(' expression ')' statement
  217                    | IF '(' expression ')' statement ELSE statement
  218                    | SWITCH '(' expression ')' statement

  219 iteration_statement: WHILE '(' expression ')' statement
  220                    | DO statement WHILE '(' expression ')' ';'
  221                    | FOR '(' expression_statement expression_statement ')' statement
  222                    | FOR '(' expression_statement expression_statement expression ')' statement
  223                    | FOR '(' declaration expression_statement ')' statement
  224                    | FOR '(' declaration expression_statement expression ')' statement

  225 jump_statement: GOTO IDENTIFIER ';'
  226               | CONTINUE ';'
  227               | BREAK ';'
  228               | RETURN ';'
  229               | RETURN expression ';'

  230 translation_unit: external_declaration
  231                 | translation_unit external_declaration

  232 external_declaration: function_definition
  233                     | declaration

  234 function_definition: declaration_specifiers declarator declaration_list compound_statement
  235                    | declaration_specifiers declarator compound_statement

  236 declaration_list: declaration
  237                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 28
'%' (37) 34
'&' (38) 23 50
'(' (40) 4 7 8 13 14 22 30 144 153 154 155 176 183 184 185 186 216
    217 218 219 220 221 222 223 224
')' (41) 4 7 8 13 14 22 30 144 153 154 155 176 183 184 185 186 216
    217 218 219 220 221 222 223 224
'*' (42) 24 32 150 151 156 157 158 159 181 182
'+' (43) 25 36
',' (44) 14 16 75 88 124 130 131 134 163 165 170 189 192 193
'-' (45) 26 37
'.' (46) 9 198
'/' (47) 33
':' (58) 60 126 127 205 206 207
';' (59) 77 78 118 214 215 220 225 226 227 228 229
'<' (60) 42
'=' (61) 63 90 136 194
'>' (62) 43
'?' (63) 60
'[' (91) 6 145 146 147 148 149 150 151 152 177 178 179 180 181 182
    197
']' (93) 6 145 146 147 148 149 150 151 152 177 178 179 180 181 182
    197
'^' (94) 52
'{' (123) 13 14 111 112 128 129 130 131 188 189 208 209
'|' (124) 54
'}' (125) 13 14 111 112 128 129 130 131 188 189 208 209
'~' (126) 27
error (256)
LOWER_THAN_ELSE (258)
ELSE (259) 217
IDENTIFIER (260) 1 9 10 111 113 129 131 132 135 136 143 169 170 198
    205 225
CONSTANT (261) 2
STRING_LITERAL (262) 3
SIZEOF (263) 21 22
PTR_OP (264) 10
INC_OP (265) 11 18
DEC_OP (266) 12 19
LEFT_OP (267) 39
RIGHT_OP (268) 40
LE_OP (269) 44
GE_OP (270) 45
EQ_OP (271) 47
NE_OP (272) 48
AND_OP (273) 56
OR_OP (274) 58
MUL_ASSIGN (275) 64
DIV_ASSIGN (276) 65
MOD_ASSIGN (277) 66
ADD_ASSIGN (278) 67
SUB_ASSIGN (279) 68
LEFT_ASSIGN (280) 69
RIGHT_ASSIGN (281) 70
AND_ASSIGN (282) 71
XOR_ASSIGN (283) 72
OR_ASSIGN (284) 73
TYPE_NAME (285) 110
TYPEDEF (286) 91
EXTERN (287) 92
STATIC (288) 93 148 149
AUTO (289) 94
REGISTER (290) 95
INLINE (291) 140
RESTRICT (292) 138
CHAR (293) 97
SHORT (294) 98
INT (295) 99
LONG (296) 100
SIGNED (297) 103
UNSIGNED (298) 104
FLOAT (299) 101
DOUBLE (300) 102
CONST (301) 137
VOLATILE (302) 139
VOID (303) 96
BOOL (304) 105
COMPLEX (305) 106
IMAGINARY (306) 107
STRUCT (307) 114
UNION (308) 115
ENUM (309) 128 129 130 131 132
ELLIPSIS (310) 163
CASE (311) 206
DEFAULT (312) 207
IF (313) 216 217
SWITCH (314) 218
WHILE (315) 219 220
DO (316) 220
FOR (317) 221 222 223 224
GOTO (318) 225
CONTINUE (319) 226
BREAK (320) 227
RETURN (321) 228 229


Nonterminals, with rules where they appear

$accept (91)
    左： 0
primary_expression (92)
    左： 1 2 3 4, 右： 5
postfix_expression (93)
    左： 5 6 7 8 9 10 11 12 13 14, 右： 6 7 8 9 10 11 12 17
argument_expression_list (94)
    左： 15 16, 右： 8 16
unary_expression (95)
    左： 17 18 19 20 21 22, 右： 18 19 21 29 62
unary_operator (96)
    左： 23 24 25 26 27 28, 右： 20
cast_expression (97)
    左： 29 30, 右： 20 30 31 32 33 34
multiplicative_expression (98)
    左： 31 32 33 34, 右： 32 33 34 35 36 37
additive_expression (99)
    左： 35 36 37, 右： 36 37 38 39 40
shift_expression (100)
    左： 38 39 40, 右： 39 40 41 42 43 44 45
relational_expression (101)
    左： 41 42 43 44 45, 右： 42 43 44 45 46 47 48
equality_expression (102)
    左： 46 47 48, 右： 47 48 49 50
and_expression (103)
    左： 49 50, 右： 50 51 52
exclusive_or_expression (104)
    左： 51 52, 右： 52 53 54
inclusive_or_expression (105)
    左： 53 54, 右： 54 55 56
logical_and_expression (106)
    左： 55 56, 右： 56 57 58
logical_or_expression (107)
    左： 57 58, 右： 58 59 60
conditional_expression (108)
    左： 59 60, 右： 60 61 76
assignment_expression (109)
    左： 61 62, 右： 15 16 62 74 75 145 147 148 149 178 180 187
assignment_operator (110)
    左： 63 64 65 66 67 68 69 70 71 72 73, 右： 62
expression (111)
    左： 74 75, 右： 4 6 60 75 215 216 217 218 219 220 222 224
    229
constant_expression (112)
    左： 76, 右： 126 127 136 197 206
declaration (113)
    左： 77 78, 右： 212 223 224 233 236 237
declaration_specifiers (114)
    左： 79 80 81 82 83 84 85 86, 右： 77 78 80 82 84 86 166 167
    168 234 235
init_declarator_list (115)
    左： 87 88, 右： 78 88
init_declarator (116)
    左： 89 90, 右： 87 88
storage_class_specifier (117)
    左： 91 92 93 94 95, 右： 79 80
type_specifier (118)
    左： 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110,
    右： 81 82 119 120
struct_or_union_specifier (119)
    左： 111 112 113, 右： 108
struct_or_union (120)
    左： 114 115, 右： 111 112 113
struct_declaration_list (121)
    左： 116 117, 右： 111 112 117
struct_declaration (122)
    左： 118, 右： 116 117
specifier_qualifier_list (123)
    左： 119 120 121 122, 右： 118 119 121 171 172
struct_declarator_list (124)
    左： 123 124, 右： 118 124
struct_declarator (125)
    左： 125 126 127, 右： 123 124
enum_specifier (126)
    左： 128 129 130 131 132, 右： 109
enumerator_list (127)
    左： 133 134, 右： 128 129 130 131 134
enumerator (128)
    左： 135 136, 右： 133 134
type_qualifier (129)
    左： 137 138 139, 右： 83 84 121 122 160 161
function_specifier (130)
    左： 140, 右： 85 86
declarator (131)
    左： 141 142, 右： 89 90 125 127 144 166 234 235
direct_declarator (132)
    左： 143 144 145 146 147 148 149 150 151 152 153 154 155, 右：
    141 142 145 146 147 148 149 150 151 152 153 154 155
pointer (133)
    左： 156 157 158 159, 右： 141 158 159 173 175
type_qualifier_list (134)
    左： 160 161, 右： 145 146 148 149 150 157 159 161
parameter_type_list (135)
    左： 162 163, 右： 153 184 186
parameter_list (136)
    左： 164 165, 右： 162 163 165
parameter_declaration (137)
    左： 166 167 168, 右： 164 165
identifier_list (138)
    左： 169 170, 右： 154 170
type_name (139)
    左： 171 172, 右： 13 14 22 30
abstract_declarator (140)
    左： 173 174 175, 右： 167 172 176
direct_abstract_declarator (141)
    左： 176 177 178 179 180 181 182 183 184 185 186, 右： 174
    175 179 180 182 185 186
initializer (142)
    左： 187 188 189, 右： 90 190 191 192 193
initializer_list (143)
    左： 190 191 192 193, 右： 13 14 188 189 192 193
designation (144)
    左： 194, 右： 191 193
designator_list (145)
    左： 195 196, 右： 194 196
designator (146)
    左： 197 198, 右： 195 196
statement (147)
    左： 199 200 201 202 203 204, 右： 205 206 207 213 216 217
    218 219 220 221 222 223 224
labeled_statement (148)
    左： 205 206 207, 右： 199
compound_statement (149)
    左： 208 209, 右： 200 234 235
block_item_list (150)
    左： 210 211, 右： 209 211
block_item (151)
    左： 212 213, 右： 210 211
expression_statement (152)
    左： 214 215, 右： 201 221 222 223 224
selection_statement (153)
    左： 216 217 218, 右： 202
iteration_statement (154)
    左： 219 220 221 222 223 224, 右： 203
jump_statement (155)
    左： 225 226 227 228 229, 右： 204
translation_unit (156)
    左： 230 231, 右： 0 231
external_declaration (157)
    左： 232 233, 右： 230 231
function_definition (158)
    左： 234 235, 右： 232
declaration_list (159)
    左： 236 237, 右： 234 237


State 0

    0 $accept: . translation_unit $end

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    BOOL       shift, and go to state 20
    COMPLEX    shift, and go to state 21
    IMAGINARY  shift, and go to state 22
    STRUCT     shift, and go to state 23
    UNION      shift, and go to state 24
    ENUM       shift, and go to state 25

    declaration                转到状态 26
    declaration_specifiers     转到状态 27
    storage_class_specifier    转到状态 28
    type_specifier             转到状态 29
    struct_or_union_specifier  转到状态 30
    struct_or_union            转到状态 31
    enum_specifier             转到状态 32
    type_qualifier             转到状态 33
    function_specifier         转到状态 34
    translation_unit           转到状态 35
    external_declaration       转到状态 36
    function_definition        转到状态 37


State 1

  110 type_specifier: TYPE_NAME .

    $default  reduce using rule 110 (type_specifier)


State 2

   91 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 91 (storage_class_specifier)


State 3

   92 storage_class_specifier: EXTERN .

    $default  reduce using rule 92 (storage_class_specifier)


State 4

   93 storage_class_specifier: STATIC .

    $default  reduce using rule 93 (storage_class_specifier)


State 5

   94 storage_class_specifier: AUTO .

    $default  reduce using rule 94 (storage_class_specifier)


State 6

   95 storage_class_specifier: REGISTER .

    $default  reduce using rule 95 (storage_class_specifier)


State 7

  140 function_specifier: INLINE .

    $default  reduce using rule 140 (function_specifier)


State 8

  138 type_qualifier: RESTRICT .

    $default  reduce using rule 138 (type_qualifier)


State 9

   97 type_specifier: CHAR .

    $default  reduce using rule 97 (type_specifier)


State 10

   98 type_specifier: SHORT .

    $default  reduce using rule 98 (type_specifier)


State 11

   99 type_specifier: INT .

    $default  reduce using rule 99 (type_specifier)


State 12

  100 type_specifier: LONG .

    $default  reduce using rule 100 (type_specifier)


State 13

  103 type_specifier: SIGNED .

    $default  reduce using rule 103 (type_specifier)


State 14

  104 type_specifier: UNSIGNED .

    $default  reduce using rule 104 (type_specifier)


State 15

  101 type_specifier: FLOAT .

    $default  reduce using rule 101 (type_specifier)


State 16

  102 type_specifier: DOUBLE .

    $default  reduce using rule 102 (type_specifier)


State 17

  137 type_qualifier: CONST .

    $default  reduce using rule 137 (type_qualifier)


State 18

  139 type_qualifier: VOLATILE .

    $default  reduce using rule 139 (type_qualifier)


State 19

   96 type_specifier: VOID .

    $default  reduce using rule 96 (type_specifier)


State 20

  105 type_specifier: BOOL .

    $default  reduce using rule 105 (type_specifier)


State 21

  106 type_specifier: COMPLEX .

    $default  reduce using rule 106 (type_specifier)


State 22

  107 type_specifier: IMAGINARY .

    $default  reduce using rule 107 (type_specifier)


State 23

  114 struct_or_union: STRUCT .

    $default  reduce using rule 114 (struct_or_union)


State 24

  115 struct_or_union: UNION .

    $default  reduce using rule 115 (struct_or_union)


State 25

  128 enum_specifier: ENUM . '{' enumerator_list '}'
  129               | ENUM . IDENTIFIER '{' enumerator_list '}'
  130               | ENUM . '{' enumerator_list ',' '}'
  131               | ENUM . IDENTIFIER '{' enumerator_list ',' '}'
  132               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 38
    '{'         shift, and go to state 39


State 26

  233 external_declaration: declaration .

    $default  reduce using rule 233 (external_declaration)


State 27

   77 declaration: declaration_specifiers . ';'
   78            | declaration_specifiers . init_declarator_list ';'
  234 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  235                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 40
    '('         shift, and go to state 41
    '*'         shift, and go to state 42
    ';'         shift, and go to state 43

    init_declarator_list  转到状态 44
    init_declarator       转到状态 45
    declarator            转到状态 46
    direct_declarator     转到状态 47
    pointer               转到状态 48


State 28

   79 declaration_specifiers: storage_class_specifier .
   80                       | storage_class_specifier . declaration_specifiers

    TYPE_NAME  shift, and go to state 1
    TYPEDEF    shift, and go to state 2
    EXTERN     shift, and go to state 3
    STATIC     shift, and go to state 4
    AUTO       shift, and go to state 5
    REGISTER   shift, and go to state 6
    INLINE     shift, and go to state 7
    RESTRICT   shift, and go to state 8
    CHAR       shift, and go to state 9
    SHORT      shift, and go to state 10
    INT        shift, and go to state 11
    LONG       shift, and go to state 12
    SIGNED     shift, and go to state 13
    UNSIGNED   shift, and go to state 14
    FLOAT      shift, and go to state 15
    DOUBLE     shift, and go to state 16
    CONST      shift, and go to state 17
    VOLATILE   shift, and go to state 18
    VOID       shift, and go to state 19
    BOOL       shift, and go to state 20
    COMPLEX    shift, and go to state 21
    IMAGINARY  shift, and go to state 22
    STRUCT     shift, and go to state 23
    UNION      shift, and go to state 24
    ENUM       shift, and go to state 25

    $default  reduce using rule 79 (declaration_specifiers)
